--- a/app/src/main/res/layout/item_message.xml
+++ b/app/src/main/res/layout/item_message.xml
@@ -11,8 +11,8 @@
         android:id="@+id/profile_image"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="4dp"
         android:layout_marginBottom="4dp"
         android:src="@drawable/menu_profile" />
 
@@ -36,17 +36,19 @@
         <TextView
             android:id="@+id/message"
             android:layout_width="wrap_content"
-            android:layout_height="50dp"
-            android:textSize="15sp"
-            android:layout_marginStart="20dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
             android:layout_marginTop="6dp"
+            android:textSize="12sp"
+            android:textColor="@color/white"
+            android:background="@drawable/layout_chat"
             android:text="메세지" />
         <TextView
             android:id="@+id/time_stamp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="6dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="3dp"
             android:textSize="12sp"
             android:text="03월 17일 20:22" />
     </LinearLayout>
