--- a/app/src/main/res/layout/activity_chatting.xml
+++ b/app/src/main/res/layout/activity_chatting.xml
@@ -46,7 +46,7 @@
                 app:layout_constraintStart_toStartOf="@id/chatting"
                 app:layout_constraintTop_toBottomOf="@+id/chatting"
                 app:layout_constraintTop_toTopOf="@id/chatting"/>
-            <LinearLayout
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginHorizontal="10dp"
@@ -54,15 +54,24 @@
                 android:orientation="horizontal">
                 <EditText
                     android:id="@+id/send_msg"
-                    android:layout_width="300dp"
-                    android:layout_height="50dp"/>
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintEnd_toStartOf="@id/image_view"
+                    app:layout_constraintBottom_toBottomOf="parent"/>
                 <Button
                     android:id="@+id/image_view"
                     android:layout_width="70dp"
-                    android:layout_height="50dp"
+                    android:layout_height="wrap_content"
                     android:layout_marginStart="10dp"
-                    android:text = "전송"/>
-            </LinearLayout>
+                    android:text = "전송"
+                    android:layout_alignRight="@+id/send_msg"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/send_msg"
+                    app:layout_constraintBottom_toBottomOf="parent"/>
+            </androidx.constraintlayout.widget.ConstraintLayout>
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
 
